# GDPBrazil

./: all_data.csv  ibge.csv  mvp.ipynb  mvp_analysis.ipynb  pyproject.toml  scrapper.ipynb
