[project]
name = "mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pmdarima>=2.0.4",
    "python-bcb>=0.3.0",
    "requests-cache>=1.2.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "sidrapy>=0.1.4",
    "sktime>=0.34.0",
    "statsmodels>=0.14.4",
    "xlrd>=2.0.1",
    "yfinance>=0.2.49",
]
